Changes in 1.2.11:
  o Client Changes:
    * The error message printed when Conary encounters an unhandled
      exception has been changed to reflect the fact that the common
      case is merely poor handling of the error condition, rather than
      another bug.  It has also been reformatted to display better in
      rITS. (CNY-2265)
    * The "conary-debug" script that collects information to help
      debug a crash has been enhanced to include the recently-added
      manifest file. (CNY-2338)

  o Build changes:
    * PythonSetup synopsis now mentions the setupName keyword
      argument. (CNY-2360)
    * The conary.1 manual page now documents the purpose of the
      /etc/conary/components directory. (CNY-2361)
    * The clearBuildReqs() function now has a synonym called
      clearBuildRequires() and the clearCrossReqs() function now has a
      synonym called clearCrossRequires().  The old function names
      will be deprecated in the future. (CNY-834)

  o Bug Fixes:
    * When building groups, r.addCopy() now respects the groupName
      flag. (CNY-2345)
    * The searchPath parameter in group methods now works when it
      contains packages (before it worked only with labels). (CNY-2372)
    * A bug that was preventing users with colons in their passwords
      to use the web interface has been fixed. (CNY-2374)
    * Attempting to add entitlements for unknown entitlement classes
      now raises an UnknownEntitlementGroup exception. (CNY-2377)
    * Committing source packages that use shell-style brace and
      glob expansion in addPatch() can now be committed to a
      repository. (CNY-1152)

Changes in 1.2.10:
  o Client Changes:
    * The "conary verify" command no longer complains about files which
      have been removed with "conary remove". (CNY-950)
    * Local rollbacks for removals now store the original contents for
      modified config files. (CNY-2350)
    * Permission errors now list both the URL and the repository